--- a/toprated.html
+++ b/toprated.html
@@ -101,7 +101,7 @@
     <img src="https://codehs.com/uploads/09b54ebe94df364b447dc2edb1250b32" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
       <h5 class="card-title">Goodfellas (1990)</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text">Sorry to Henry Hill, but This Character Is the Greatest in ...Goodfellas is a cinematic masterpiece celebrated for its hyper-stylized, energetic depiction of mob life, blending thrilling glamour with brutal reality through its dynamic direction, iconic soundtrack, and unforgettable performances (especially Joe Pesci's Oscar-winning turn), offering a gritty, anthropological look at ambition, loyalty, and betrayal that redefined the gangster genre</p>
     </div>
     <div class="card-footer">
       <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -111,7 +111,7 @@
     <img src="https://codehs.com/uploads/3d00a2d130d608d493a9926bf89de4da" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
       <h5 class="card-title">Star Wars: Episode V - The Empire Strikes Back (1980)</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">The Empire Strikes Back (ESB) is acclaimed as a darker, deeper, and more mature sequel that elevates the original saga, focusing on high-stakes pursuit, intense character growth, and profound themes of doubt, destiny, and sacrifice, featuring iconic action (like the Battle of Hoth), the introduction of Yoda, and unforgettable dramatic twists that test heroes like Luke, Leia, and Han as they face overwhelming Imperial might. Its greatness lies in its complex narrative, emotional weight, groundbreaking effects, and iconic moments, solidifying it as a benchmark in sci-fi cinema. </p>
     </div>
     <div class="card-footer">
       <small class="text-body-secondary">Last updated 3 mins ago</small>
@@ -121,7 +121,7 @@
     <img src="https://codehs.com/uploads/b80592fc39113f92eaac785e41abf028" class="card-img-top" width="100" height="450" alt="...">
     <div class="card-body">
       <h5 class="card-title"> The Godfather Part II (1974)</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text">The Godfather: Part II is acclaimed as a masterpiece for its brilliant parallel storytelling, contrasting young Vito Corleone's rise from immigrant to crime boss with his son Michael's descent into cold, isolated power, exploring profound themes of family, legacy, corruption, and the American Dream's dark side, elevated by stunning performances (De Niro, Pacino), masterful direction by Francis Ford Coppola, and cinematic perfection that many consider surpasses the original. </p>
     </div>
     <div class="card-footer">
       <small class="text-body-secondary">Last updated 3 mins ago</small>
