--- a/ratings.html
+++ b/ratings.html
@@ -47,7 +47,8 @@
 								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 							</p>
 							<p>
-								<div class="accordion-item">
+								<div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
         Accordion Item #1
@@ -57,6 +58,7 @@
       <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item’s accordion body.</div>
     </div>
   </div>
+									</div>
 							</p>
 						</div>
 					</div>
