--- a/ratings.html
+++ b/ratings.html
@@ -52,11 +52,12 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="/img/city-q-c-600-200-1.jpg" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/317aebaf4faaf43101328e19bc701b10" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Card title
+								Sinners
 							</h5>
+							<h2>2025 (94%)</h2>
 							<p class="card-text">
 								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 							</p>
