--- a/ratings.html
+++ b/ratings.html
@@ -43,7 +43,7 @@
 							<h5 class="card-title">
 								Predator:Badlands
 							</h5>
-							<h2>2025 (82%)</h2>
+							<p>2025 (82%)</p>
 							<p class="card-text">
 								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 							</p>
@@ -57,7 +57,7 @@
 							<h5 class="card-title">
 								Sinners
 							</h5>
-							<h2>2025 (94%)</h2>
+							<p>2025 (94%)</p>
 							<p class="card-text">
 								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 							</p>
@@ -69,11 +69,12 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="/img/sports-q-c-600-200-1.jpg" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/72369caa2b731dc0b0aeed03de8ff72c" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Card title
+							Top Gun: Maverick
 							</h5>
+							<p>2022 (92%)</p>
 							<p class="card-text">
 								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 							</p>
