--- a/ratings.html
+++ b/ratings.html
@@ -45,7 +45,7 @@
 							</h5>
 							<p>2025 (82%)</p>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Description.
 							</p>
 						</div>
 					</div>
@@ -59,7 +59,7 @@
 							</h5>
 							<p>2025 (94%)</p>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Description
 							</p>
 							<p>
 								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
@@ -76,7 +76,7 @@
 							</h5>
 							<p>2022 (92%)</p>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Description
 							</p>
 						</div>
 					</div>
