Adjust image height for Bootstrap thumbnail
Set the height of the Bootstrap thumbnail image to 300px.

--- a/ratings.html
+++ b/ratings.html
@@ -38,7 +38,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/0df6de052d523cb7fdfe7b77138474f4" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/0df6de052d523cb7fdfe7b77138474f4" height="300px"/>
 						<div class="card-block">
 							<h5 class="card-title">
 								Predator:Badlands
