Adjust image height for Bootstrap thumbnails
Updated image height for Bootstrap thumbnails in the ratings section.

--- a/ratings.html
+++ b/ratings.html
@@ -38,7 +38,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/0df6de052d523cb7fdfe7b77138474f4" height="300px"/>
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/0df6de052d523cb7fdfe7b77138474f4" height="250px"/>
 						<div class="card-block">
 							<h5 class="card-title">
 								Predator:Badlands
@@ -52,7 +52,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/317aebaf4faaf43101328e19bc701b10" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/317aebaf4faaf43101328e19bc701b10" height="250px"/>
 						<div class="card-block">
 							<h5 class="card-title">
 								Sinners
@@ -66,7 +66,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/72369caa2b731dc0b0aeed03de8ff72c" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/72369caa2b731dc0b0aeed03de8ff72c" height="250px"/>
 						<div class="card-block">
 							<h5 class="card-title">
 							Top Gun: Maverick
