--- a/ratings.html
+++ b/ratings.html
@@ -32,27 +32,27 @@
       <table class="table table-striped">
 
 <br>
+		  
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-6">
-			<div class="row">
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/0df6de052d523cb7fdfe7b77138474f4" height="250px"/>
+		<div class="col-md-2">
+			<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/c04fb32e9dd7aaaed1923105673b9775" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Predator:Badlands
+								Predator: Badlands
 							</h5>
 							<p>2025 (82%)</p>
 							<p class="card-text">
-								Description.
+								Description
 							</p>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/317aebaf4faaf43101328e19bc701b10" height="250px"/>
+		</div>
+		<div class="col-md-2">
+		<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/d4c749768a2ba2ee011596ea8cee9837" />
 						<div class="card-block">
 							<h5 class="card-title">
 								Sinners
@@ -63,13 +63,13 @@
 							</p>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/72369caa2b731dc0b0aeed03de8ff72c" height="250px"/>
+		</div>
+		<div class="col-md-2">
+			<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/bcb41a909e8c37ccf8492fd6a2920230" />
 						<div class="card-block">
 							<h5 class="card-title">
-							Top Gun: Maverick
+								Top Gun: Maverick
 							</h5>
 							<p>2022 (92%)</p>
 							<p class="card-text">
@@ -77,51 +77,82 @@
 							</p>
 						</div>
 					</div>
-				</div>
-			</div>
 		</div>
-		<div class="col-md-6">
-			<div class="row">
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="/img/people-q-c-600-200-1.jpg" />
+		<div class="col-md-2">
+			<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/7611f72845639584831df724196e8de0" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Card title
+								The Black Phone
 							</h5>
+							<p>2021 (87%)</p>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Description
 							</p>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="/img/city-q-c-600-200-1.jpg" />
+		</div>
+		<div class="col-md-2">
+			<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/518ede78df4d968b1fe26fc10c2d290a" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Card title
+								Free Guy
 							</h5>
+							<p>2021 (89%)</p>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Description
 							</p>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="/img/sports-q-c-600-200-1.jpg" />
+		</div>
+		</div>
+		<div class="col-md-2">
+			<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/b4888cf3a2a0608f27a35d74f37fd9d8" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Card title
+								Space Jam: A New Legacy
 							</h5>
+							<p>2021 (39%)</p>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Description
 							</p>
 						</div>
 					</div>
-				</div>
-			</div>
+		</div>
+		</div>
+	</div>
+</div>
+
+<br>
+	  
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-2">
+			<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="" />
+						<div class="card-block">
+							<h5 class="card-title">
+								We Can Be Heros
+							</h5>
+							<p>2020 (60%)</p>
+							<p class="card-text">
+								Description
+							</p>
+						</div>
+					</div>
+		</div>
+		</div>
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-2">
+		</div>
+		<div class="col-md-2">
 		</div>
 	</div>
 </div>
