--- a/ratings.html
+++ b/ratings.html
@@ -32,7 +32,7 @@
 	<div class="row">
 		<div class="col-md-2" class="card">
 		
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/c04fb32e9dd7aaaed1923105673b9775" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/c04fb32e9dd7aaaed1923105673b9775" width="60px" />
 						<div class="card-block">
 							<h5 class="card-title">
 								Predator: Badlands
@@ -46,7 +46,7 @@
 				</div>
 		</div>
 		<div class="col-md-2" class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/d4c749768a2ba2ee011596ea8cee9837" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/d4c749768a2ba2ee011596ea8cee9837" width="60px" />
 						<div class="card-block">
 							<h5 class="card-title">
 								Sinners
@@ -60,7 +60,7 @@
 		</div>
 		<div class="col-md-2" class="card">
 			
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/bcb41a909e8c37ccf8492fd6a2920230" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/bcb41a909e8c37ccf8492fd6a2920230" width="60px" />
 						<div class="card-block">
 							<h5 class="card-title">
 								Top Gun: Maverick
@@ -74,7 +74,7 @@
 		</div>
 		<div class="col-md-2" class="card">
 			
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/7611f72845639584831df724196e8de0" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/7611f72845639584831df724196e8de0" width="60px" />
 						<div class="card-block">
 							<h5 class="card-title">
 								The Black Phone
@@ -88,7 +88,7 @@
 		</div>
 		<div class="col-md-2" class="card">
 			
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/518ede78df4d968b1fe26fc10c2d290a" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/518ede78df4d968b1fe26fc10c2d290a" width="60px" />
 						<div class="card-block">
 							<h5 class="card-title">
 								Free Guy
@@ -102,7 +102,7 @@
 		</div>
 
 		<div class="col-md-2" class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/b4888cf3a2a0608f27a35d74f37fd9d8" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/b4888cf3a2a0608f27a35d74f37fd9d8" width="60px" />
 						<div class="card-block">
 							<h5 class="card-title">
 								Space Jam: A New Legacy
