Add table for movie ratings in ratings.html
Added a new table structure for displaying movie ratings.

--- a/ratings.html
+++ b/ratings.html
@@ -146,6 +146,9 @@
 	</div>
 </div>
 <br>
+ 
+    <div>
+		<table>
 
         <thead>
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
