Enhance table styling in ratings.html

--- a/ratings.html
+++ b/ratings.html
@@ -147,8 +147,8 @@
 </div>
 <br>
  
-    <div>
-		<table>
+     <div class="table-responsive">
+      <table class="table table-striped">
 
         <thead>
           <tr><th>Movie</th><th>Rating</th><th>Year</th></tr>
