--- a/ratings.html
+++ b/ratings.html
@@ -25,7 +25,7 @@
   </nav>
   <main class="container">
     <h1 class="mt-4">Ratings</h1>
-    <p class="lead"> These are our ratings, and can be veiwed further by clicking on the movie.</p>
+    <p class="lead"> </p>
 
 		  
 <div class="container-fluid">
