Update movie details and image sources in ratings.html
Updated movie titles and ratings, and replaced image sources with new URLs.

--- a/ratings.html
+++ b/ratings.html
@@ -35,48 +35,39 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="/img/people-q-c-600-200-1.jpg" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/f5ccb1d083a2d256272be3248dca8e0e" />
 						<div class="card-block">
 							<h5 class="card-title">
 								Predator:Badlands
 							</h5>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
-							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								2025 (82%)
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="/img/city-q-c-600-200-1.jpg" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/88147ed6da62cd1e81ec10c5613c9e0a" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Card title
+								Sinners
 							</h5>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
-							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								2025 (94%)
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="/img/sports-q-c-600-200-1.jpg" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/d965e3bcf644dc5529f34fb8d3a86e73" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Card title
+								Top Gun: Maverick
 							</h5>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
-							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								2022 (92%)
 							</p>
 						</div>
 					</div>
@@ -87,48 +78,39 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="/img/people-q-c-600-200-1.jpg" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/88a9d61e22bd33b3f626aaa45cffcf73" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Card title
+								The Black Phone
 							</h5>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
-							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								2021 (87%)
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="/img/city-q-c-600-200-1.jpg" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/434af71cff35cd0092839467a6294228" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Card title
+								Free Guy
 							</h5>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
-							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								2021 (89%)
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="/img/sports-q-c-600-200-1.jpg" />
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/6e7a0fa00ba71861b1f6573274829f20" />
 						<div class="card-block">
 							<h5 class="card-title">
-								Card title
+								Space Jam: A New Legacy
 							</h5>
 							<p class="card-text">
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
-							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								2021 (39%)
 							</p>
 						</div>
 					</div>
