Update carousel images and captions in index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ol class="carousel-indicators">
             <li data-target="https://codehs.com/uploads/e0235d435e5fd0e216c2cfab458ac1e1" data-slide-to="0" class="active"></li>
             <li data-target="https://codehs.com/uploads/e33597dcdcc515e3ebbb4deca27928f7" data-slide-to="1"></li>
-            <li data-target="https://codehs.com/uploads/17e6def250711a0adba751ad4e62777a" data-slide-to="2"></li>
+            <li data-target="https://codehs.com/uploads/454f18281702adb477774147c0c08dcb" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -64,10 +64,10 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/800a693d0f5f27f63001183bddd1a2cb" class="d-block w-100" alt="Slide 3" >
+              <img src="https://codehs.com/uploads/454f18281702adb477774147c0c08dcb" class="d-block w-100" alt="Slide 3" >
               <div class="carousel-caption d-none d-md-block">
-                <h5>Five Nights at Freddy's 2</h5>
-                <p> Box Office: ‘Five Nights at Freddy’s 2’ Opens to Huge $63M in U.S., ‘Zootopia 2’ Crosses $915M Globally</p>
+                <h5>'Gaston'</h5>
+                <p> ‘Beauty and the Beast’ Live-Action Villain Spinoff ‘Gaston’ in the Works at Disney</p>
               </div>
             </div>
           </div>
