Add new movie ratings to ratings.html

--- a/ratings.html
+++ b/ratings.html
@@ -154,9 +154,11 @@
           <tr><td>Inglourious Basterds</td><td>99%</td><td>2009</td></tr>   
           <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>  
         <tr><td>Star Wars: The Clone Wars</td><td>30%</td><td>2008</td></tr>   
+		  <tr><td>Superbad</td><td>98%</td><td>2007</td></tr>   
         <tr><td>Rescue Dawn</td><td>80%</td><td>2006</td></tr>
           <tr><td>Happy Feet</td><td>73%</td><td>2006</td></tr>
         <tr><td>The Departed</td><td>100%</td><td>2006</td></tr>
+		  <tr><td>Accepted</td><td>75%</td><td>2006</td></tr>
           <tr><td>Leprechaun: Back 2 tha Hood</td><td>20%</td><td>2003</td></tr> 
           <tr><td>Solaris</td><td>85%</td><td>2002</td></tr>  
          <tr><td>Star Wars: Episode II - Attack of the Clones</td><td>75%</td><td>2002</td></tr> 
@@ -182,6 +184,7 @@
         <tr><td>Miracle on Ice</td><td>99%</td><td>1981</td></tr>
         <tr><td>Raiders of the Lost Ark</td><td>99%</td><td>1981</td></tr>
         <tr><td>Star Wars: Episode V - The Empire Strikes Back</td><td>100%</td><td>1980<td></tr>
+		   <tr><td>Rocky</td><td>95%</td><td>1976</td></tr>
          <tr><td>Star Wars: Episode IV – A New Hope</td><td>92%</td><td>1974</td></tr>
         <tr><td>The Godfather Part II</td><td>100%</td><td>1974</td></tr>
         <tr><td>The Godfather</td><td>99%</td><td>1972</td></tr>
