Update movie details and images in index.html

--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
 <br>
         <div class="row">
           <div class="col-md-4">
-             <img src="https://codehs.com/uploads/86139f04645e3a0325ceadc24b16a49a" width="100px">
-            <h3>Accepted (75%)</h3>
-            <p>After receiving his latest college rejection letter, senior Bartleby Gaines devises a novel way to fool everyone into thinking he is college-bound: Open his own university. Bartleby and his similarly stymied friends take over an abandoned building, create a fake Web site, hire a friend's uncle to pose as the dean, and -- presto -- a school is born. However, they do their jobs too well, and soon many other rejects try to gain admittance to the nonexistent South Harmon Institute of Technology.</p>
+             <img src="https://codehs.com/uploads/b49972d37e3ec15fe75a4bf7f3808c8e" width="100px">
+            <h3>Air Bud (45%)</h3>
+            <p>Air Bud (1997) is about lonely 12-year-old Josh Framm, who, after moving to a new town, befriends Buddy, a runaway Golden Retriever with an incredible talent for basketball, leading them to join the school team and aim for the state finals, all while evading Buddy's abusive former owner who wants to reclaim him for profit</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/8529966dd7b244f8422f14cb280538f5" width="100px">
-            <h3>Superbad(98%)</h3>
-            <p>Two inseparable best friends navigate the last weeks of high school and are invited to a gigantic house party. Together with their nerdy friend, they spend a long day trying to score enough alcohol to supply the party and inebriate two girls in order to kick-start their sex lives before they go off to college. Their quest is complicated after one of them falls in with two inept cops who are determined to show him a good time.</p>
+            <img src="https://codehs.com/uploads/c0281a9af28c232da117f716185acd78" width="100px">
+            <h3>Project X (78%)</h3>
+            <p>Three high school seniors throw a party to make a name for themselves. As the night progresses, things spiral out of control as word of the party spreads.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/300bde2ff1d15f10466a6fdd40377d8e" width="100px">
-            <h3>Rocky(95%)</h3>
-            <p>Rocky is a small-time Philadelphia boxer going nowhere, until an unbelievable shot to fight the world heavyweight champion lights a fire inside him.</p>
+            <img src="https://codehs.com/uploads/811602f3ef56dfd2bc595cbbfd8c7db0" width="100px">
+            <h3>Rocky II (78%)</h3>
+            <p>After Rocky goes the distance with champ Apollo Creed, both try to put the fight behind them and move on. Rocky settles down with Adrian but can't put his life together outside the ring, while Creed seeks a rematch to restore his reputation. Soon enough, the "Master of Disaster" and the "Italian Stallion" are set on a collision course for a climactic battle that is brutal and unforgettable.</p>
           </div>
         </div>
       </div>
