Add movie cards to ratings.html
Added movie cards with titles and ratings to the layout.

--- a/ratings.html
+++ b/ratings.html
@@ -35,6 +35,100 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/d459736b0245c46ac5a85cac2ebee506" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Mission: Impossible – The Final Reckoning
+							</h5>
+							<p class="card-text">
+								2025 (82%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/786dad22df87ffdfd91f3bd20dc6f735" />
+						<div class="card-block">
+							<h5 class="card-title">
+								Jurassic World Rebirth
+							</h5>
+							<p class="card-text">
+								2025 (44%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/9b79e75a33fffff1c7e678cf3f0e7537" />
+						<div class="card-block">
+							<h5 class="card-title">
+								F1
+							</h5>
+							<p class="card-text">
+								2025 (81%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/ca8cb8c97a9945cb8de8e52824393d5b" />
+						<div class="card-block">
+							<h5 class="card-title">
+								The Fantastic Four: First Steps
+							</h5>
+							<p class="card-text">
+								2025 (68%)
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/f0f0f7b2d4b066531816e04fcc4f2f4a" />
+						<div class="card-block">
+							<h5 class="card-title">
+								SISU: Road to Revenge
+							</h5>
+							<p class="card-text">
+								2025
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card">
+						<img class="card-img-top" alt="Bootstrap Thumbnail Third" src="https://codehs.com/uploads/af06b104eb07358e07e061d7e6e5ff94" />
+						<div class="card-block">
+							<h5 class="card-title">
+								The Running Man
+							</h5>
+							<p class="card-text">
+								2025 (75%)
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+	  
+<br>
+<br>
+
+	  <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="card">
 						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/f5ccb1d083a2d256272be3248dca8e0e" />
 						<div class="card-block">
 							<h5 class="card-title">
