Update ratings for 'Mission: Impossible' and add movies

--- a/ratings.html
+++ b/ratings.html
@@ -41,7 +41,7 @@
 								Mission: Impossible – The Final Reckoning
 							</h5>
 							<p class="card-text">
-								2025 (82%)
+								2025 (81%)
 							</p>
 						</div>
 					</div>
@@ -215,7 +215,7 @@
 </div>
 	  
 <br>
- 
+
      <div class="table-responsive">
       <table class="table table-striped">
 
@@ -226,6 +226,9 @@
           <tr><td>Predator:Badlands</td><td>82%</td><td>2025</td></tr>
           <tr><td>Sinners</td><td>94%</td><td>2025</td></tr>
           <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
+		  <tr><td>Everything Everywhere All at Once</td><td>93%</td><td>2022</td></tr>
+		  <tr><td>Avatar</td><td>81%</td><td>2022</td></tr>
+		  <tr><td>Sisu</td><td>86%</td><td>2022</td></tr>
           <tr><td>The Black Phone</td><td>87%</td><td>2021</td></tr>
           <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
          <tr><td>Space Jam: A New Legacy</td><td>39%</td><td>2021</td></tr>
@@ -244,6 +247,7 @@
           <tr><td>X-Men: First Class</td><td>89%</td><td>2011</td></tr>
         <tr><td>127 Hours</td><td>87%</td><td>2010</td></tr>
           <tr><td>Birdemic: Shock and Terror</td><td>2%</td><td>2010</td></tr>
+		   <tr><td>Avatar</td><td>87%</td><td>2009</td></tr>
         <tr><td>Cloudy With a Chance of Meatballs</td><td>85%</td><td>2009</td></tr>  
           <tr><td>Inglourious Basterds</td><td>99%</td><td>2009</td></tr>   
           <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>  
