--- a/ratings.html
+++ b/ratings.html
@@ -226,6 +226,7 @@
           <tr><td>Predator:Badlands</td><td>82%</td><td>2025</td></tr>
           <tr><td>Sinners</td><td>94%</td><td>2025</td></tr>
           <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
+		  <tr><td>All Quiet on the Western Front</td><td>90%</td><td>2022</td></tr>
 		  <tr><td>Everything Everywhere All at Once</td><td>93%</td><td>2022</td></tr>
 		  <tr><td>Avatar</td><td>81%</td><td>2022</td></tr>
 		  <tr><td>Sisu</td><td>86%</td><td>2022</td></tr>
@@ -234,6 +235,7 @@
          <tr><td>Space Jam: A New Legacy</td><td>39%</td><td>2021</td></tr>
           <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
           <tr><td>Sonic the hedgehog</td><td>67%</td><td>2020</td></tr>
+		  <tr><td>1917</td><td>88%</td><td>2019</td></tr>
             <tr><td>Shazam</td><td>81%</td><td>2019</td></tr>
           <tr><td>Hellboy</td><td>45%</td><td>2019</td></tr>
           <tr><td>Gamenight</td><td>79%</td><td>2018</td></tr>
@@ -257,14 +259,17 @@
           <tr><td>Happy Feet</td><td>73%</td><td>2006</td></tr>
         <tr><td>The Departed</td><td>100%</td><td>2006</td></tr>
 		  <tr><td>Accepted</td><td>75%</td><td>2006</td></tr>
+		  <tr><td>Mission: Impossible III</td><td>70%</td><td>2006</td></tr>
           <tr><td>Leprechaun: Back 2 tha Hood</td><td>20%</td><td>2003</td></tr> 
           <tr><td>Solaris</td><td>85%</td><td>2002</td></tr>  
          <tr><td>Star Wars: Episode II - Attack of the Clones</td><td>75%</td><td>2002</td></tr> 
-          <tr><td>A.I. Artificial Intelligence</td></td><td>85%</td><td>2001</td></tr>      
+          <tr><td>A.I. Artificial Intelligence</td></td><td>85%</td><td>2001</td></tr> 
+		  <tr><td>Mission: Impossible II</td><td>47%</td><td>2000</td></tr>
           <tr><td>Cast Away</td><td>90%</td><td>2000</td></tr>
         <tr><td>Leprechaun In the Hood</td><td>30%</td><td>2000</td></tr>     
         <tr><td>Star Wars: Episode I - The Phantom Menace</td><td>51%</td><td>1999</td></tr>
             <tr><td>Space Jam</td><td>62%</td><td>1996</td></tr>
+		  <tr><td>Mission: Impossible</td><td>73%</td><td>1996</td></tr>
         <tr><td>Leprechaun 4: In Space</td><td>39%</td><td>1996</td></tr>
         <tr><td>Leprechaun 3</td><td>26%</td><td>1995</td></tr>
          <tr><td>Pulp Fiction</td><td>92%</td><td>1994</td></tr>
