Update carousel images and captions in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="homeCarousel" class="carousel slide mb-4" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="https://codehs.com/uploads/e0235d435e5fd0e216c2cfab458ac1e1" data-slide-to="0" class="active"></li>
-            <li data-target="https://codehs.com/uploads/e33597dcdcc515e3ebbb4deca27928f7" data-slide-to="1"></li>
+            <li data-target="https://codehs.com/uploads/c5f7f1e1cdbdfe3d59b0505eb7b88a9e" data-slide-to="1"></li>
             <li data-target="https://codehs.com/uploads/454f18281702adb477774147c0c08dcb" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
@@ -57,10 +57,10 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/e33597dcdcc515e3ebbb4deca27928f7" class="d-block w-100" alt="Slide 2" >
+              <img src="https://codehs.com/uploads/c5f7f1e1cdbdfe3d59b0505eb7b88a9e" class="d-block w-100" alt="Slide 2" >
               <div class="carousel-caption d-none d-md-block">
                 <h5>Anaconda</h5>
-                <p>‘Anaconda’ Director Debuts Unseen Footage for “Off-the-Rails” Comedy, Teases Future of Franchise</p>
+                <p>Paul Rudd Says Ice Cube’s Approval of New ‘Anaconda’ Is Like “Being Blessed by the Pope”/p>
               </div>
             </div>
             <div class="carousel-item">
