--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="mainNav">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="index.html"> <img src="https://codehs.com/uploads/4f9e0c7765720cb5de2b986d2d1e5489" alt="A happy dog" width="50"></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="ratings.html">Ratings</a>
