Update navbar to include image link

--- a/about.html
+++ b/about.html
@@ -8,14 +8,10 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-   <img src="https://codehs.com/uploads/4f9e0c7765720cb5de2b986d2d1e5489" alt="A happy dog" width="50">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav"
-      aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+ 
     <div class="collapse navbar-collapse" id="mainNav">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html"> <img src="https://codehs.com/uploads/4f9e0c7765720cb5de2b986d2d1e5489" alt="A happy dog" width="50"></a></li>
         <li class="nav-item"><a class="nav-link" href="ratings.html">Ratings</a></li>
         <li class="nav-item"><a class="nav-link" href="toprated.html">100%</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
