--- a/ratings.html
+++ b/ratings.html
@@ -63,7 +63,7 @@
 								F1
 							</h5>
 							<p class="card-text">
-								2025 (81%)
+								2025 (85%)
 							</p>
 						</div>
 					</div>
@@ -220,7 +220,12 @@
         </thead>
 
           <tr><td>Predator:Badlands</td><td>82%</td><td>2025</td></tr>
+		  <tr><td>Jurassic World Rebirth</td><td>44%</td><td>2025</td></tr>
+		  <tr><td>F1</td><td>85%</td><td>2025</td></tr>
           <tr><td>Sinners</td><td>94%</td><td>2025</td></tr>
+		   <tr><td>The Fantastic Four: First Steps</td><td>68%</td><td>2025</td></tr>
+		  <tr><td>SISU: Road to Revenge</td><td>92%</td><td>2025</td></tr>
+		  <tr><td>Mission: Impossible – Dead Reckoning Part One</td><td>89%</td><td>2023</td></tr>
           <tr><td>Top Gun: Maverick</td><td>92%</td><td>2022</td></tr>
 		  <tr><td>All Quiet on the Western Front</td><td>90%</td><td>2022</td></tr>
 		  <tr><td>Everything Everywhere All at Once</td><td>93%</td><td>2022</td></tr>
@@ -230,26 +235,45 @@
           <tr><td>Free Guy</td><td>89%</td><td>2021</td></tr>
          <tr><td>Space Jam: A New Legacy</td><td>39%</td><td>2021</td></tr>
           <tr><td>We Can be Heros</td><td>60%</td><td>2020</td></tr>
+		    <tr><td>Soul</td><td>91%</td><td>2020</td></tr>
+		  <tr><td>Extraction</td><td>77%</td><td>2020</td></tr>
+		  <tr><td>Sound of Metal</td><td>93%</td><td>2020</td></tr>
+		   <tr><td>Onward</td><td>84%</td><td>2020</td></tr>
           <tr><td>Sonic the hedgehog</td><td>67%</td><td>2020</td></tr>
 		  <tr><td>1917</td><td>88%</td><td>2019</td></tr>
+		  <tr><td>Spiderman: Far From Home</td><td>93%</td><td>2019</td></tr>
             <tr><td>Shazam</td><td>81%</td><td>2019</td></tr>
           <tr><td>Hellboy</td><td>45%</td><td>2019</td></tr>
+		  <tr><td>Parasite</td><td>98%</td><td>2019</td></tr>
+		    <tr><td>Joker</td><td>89%</td><td>2019</td></tr>
+		  <tr><td>Uncut Gems</td><td>93%</td><td>2019</td></tr>
+		    <tr><td>Lion King</td><td>79%</td><td>2019</td></tr>
+		    <tr><td>Rocketman</td><td>92%</td><td>2019</td></tr>
+		   <tr><td>Star Wars: Episode IX - The Rise of Skywalker</td><td>52%</td><td>2019</td></tr>
+		  <tr><td>Avengers: End Game</td><td>92%</td><td>2019</td></tr>
+		  <tr><td>Solo: A Star Wars Story</td><td>72%</td><td>2018</td></tr>
+		  <tr><td>Mission: Impossible - Fallout</td><td>98%</td><td>2018</td></tr>
           <tr><td>Gamenight</td><td>79%</td><td>2018</td></tr>
           <tr><td>The Meg</td><td>51%</td><td>2018</td></tr>
+		  <tr><td>Star Wars: Episode VIII - The Last Jedi</td><td>56%</td><td>2017</td></tr>
            <tr><td>Blade Runner 2049</td><td>98%</td><td>2017</td></tr>
           <tr><td>La La Land</td><td>96%</td><td>2016</td></tr>
+		  <tr><td>Rogue One: A Star Wars Story</td><td>93%</td><td>2016</td></tr>
         <tr><td>Whiplash</td><td>100%</td><td>2016</td></tr>
+		   <tr><td>Star Wars: Episode VII - The Force Awakens</td><td>79%</td><td>2015</td></tr>
           <tr><td>Mad Max: Fury Road</td><td>99%</td><td>2015</td></tr>
+		  <tr><td>Mission: Impossible - Rogue Nation</td><td>92%</td><td>2015</td></tr>
         <tr><td>Intersteller</td><td>100%</td><td>2014</td></tr>
            <tr><td>After Earth</td><td>7%</td><td>2013</td></tr>
-          <tr><td>X-Men: First Class</td><td>89%</td><td>2011</td></tr>
+          <tr><td>Mission: Impossible - Ghost Protocol</td><td>92%</td><td>2010</td></tr>
+		  <tr><td>X-Men: First Class</td><td>89%</td><td>2010</td></tr>
         <tr><td>127 Hours</td><td>87%</td><td>2010</td></tr>
           <tr><td>Birdemic: Shock and Terror</td><td>2%</td><td>2010</td></tr>
 		   <tr><td>Avatar</td><td>87%</td><td>2009</td></tr>
         <tr><td>Cloudy With a Chance of Meatballs</td><td>85%</td><td>2009</td></tr>  
           <tr><td>Inglourious Basterds</td><td>99%</td><td>2009</td></tr>   
           <tr><td>Role Models</td><td>88%</td><td>2008</td></tr>  
-        <tr><td>Star Wars: The Clone Wars</td><td>30%</td><td>2008</td></tr>   
+        <tr><td>Star Wars: The Clone Wars</td><td>47%</td><td>2008</td></tr>   
 		  <tr><td>Superbad</td><td>98%</td><td>2007</td></tr>   
         <tr><td>Rescue Dawn</td><td>80%</td><td>2006</td></tr>
           <tr><td>Happy Feet</td><td>73%</td><td>2006</td></tr>
