--- a/index.html
+++ b/index.html
@@ -99,6 +99,26 @@
         </div>
       </div>
     </div>
+
+    <h1>12 Days, 12 Movies before Christmas</h1>
+
+    <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+      12 Days: Its a Wonderful Life
+		</div>
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+		</div>
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+		</div>
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+		</div>
+	</div>
+</div>
   </main>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
