Update carousel captions and image sources

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <img src="https://codehs.com/uploads/c5f7f1e1cdbdfe3d59b0505eb7b88a9e" class="d-block w-100" alt="Slide 2" >
               <div class="carousel-caption d-none d-md-block">
                 <h5>Anaconda</h5>
-                <p>Paul Rudd Says Ice Cube’s Approval of New ‘Anaconda’ Is Like “Being Blessed by the Pope”/p>
+                <p>Paul Rudd Says Ice Cube’s Approval of New ‘Anaconda’ Is Like “Being Blessed by the Pope”</p>
               </div>
             </div>
             <div class="carousel-item">
@@ -105,20 +105,76 @@
     <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
-      12 Days: Its a Wonderful Life
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/e200a7419d80ddfbeaa0584c63e57746" />
+      12 Days: Klaus
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/36edc80af978462ba1e853868262133f" />
+			11 Days: A Charlie Brown Christmas
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/38150f58fb9e414c48b0ca13857f8a5b" />
+			10 Days: Christmas Vacation
 		</div>
 		<div class="col-md-3">
-			<img alt="Bootstrap Image Preview" src="/img/sports-q-c-140-140-3.jpg" />
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/cd5378f9b1e20bc66faa4eecbc190305" />
+			9 Days: Home Alone
 		</div>
 	</div>
 </div>
+
+    <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/9a1a9941453a8d3b23f39b1588e7d535" />
+      8 Days: Home Alone 2: Lost in New York
+		</div>
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/2bd77171e93262e0dd9b8771690dbaab" />
+			7 Days: The Santa Claus
+		</div>
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/540ed5093b6ebe66048ece685a619d94" />
+			6 Days: Die Hard
+		</div>
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/6335c92a96afde4005b8f50c2d11c26f" />
+			5 Days: The Year Without a Santa Claus
+		</div>
+	</div>
+	</div>
+
+	   <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/9cd79d18e6f0007afe7e5e05ac8669fa" />
+      4 Days: Jingle All the Way
+		</div>
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/abca3154457635f771eb42c8ad11e40a" />
+			3 Days: Miracle on 34th Street
+		</div>
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/36354521c6077fbd13a34a4e22f29ec3" />
+			2 Days: Elf
+		</div>
+		<div class="col-md-3">
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/b54370db82d379883f76ea2c7bb3d520" />
+			1 Day: Its a Wonderful Life
+		</div>
+	</div>
+	</div>
+
+	  <h1>Christmas Day!!!</h1>
+
+	     <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<img alt="Bootstrap Image Preview" src="https://codehs.com/uploads/f160f570b317e009493eacb669bceacb" width="600px"/>
+			A Christmas Story
+		</div>
+	</div>
+	</div>
   </main>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
